# gaussian

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: gen.rs
