[package]

name = "simple_gaussian"
description = "Some quick and easy functions for generating gaussian noise, mappable to specific bounds. Useful for artistic purposes."
version = "0.4.4"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["noise", "gaussian", "random", "generator"]
license = "MIT"
repository = "https://github.com/mitchmindtree/gaussian.git"
homepage = "https://github.com/mitchmindtree/gaussian"

[lib]
name = "gaussian"

[dependencies]
mindtree_utils = "*"
num = "*"
rand = "*"
