[package]

name = "simple_gaussian"
description = "Some quick and easy functions for generating gaussian noise, mappable to specific bounds. Useful for artistic purposes."
version = "0.5.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["noise", "gaussian", "random", "generator"]
license = "MIT"
repository = "https://github.com/mitchmindtree/gaussian.git"
homepage = "https://github.com/mitchmindtree/gaussian"

[lib]
name = "gaussian"

[dependencies]
mindtree_utils = "0.4"
num = "0.1"
rand = "0.3"
