[package]
name = "simple_gaussian"
description = "Some quick and easy functions for generating gaussian noise, mappable to specific bounds. Useful for artistic purposes."
version = "0.6.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["noise", "gaussian", "random", "generator"]
license = "MIT"
repository = "https://github.com/mitchmindtree/gaussian.git"
homepage = "https://github.com/mitchmindtree/gaussian"
edition = "2018"

[lib]
name = "gaussian"

[dependencies]
rand = "0.7"
rand_distr = "0.2"
